added code in input group

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: radial-gradient(#303b37, #1a1f1d);
-  color: #e1eeeb;
+  color: #efe4d7;
   min-height: 100vh;
 }
 
@@ -35,7 +35,7 @@ body {
   max-width: 30rem;
   margin: 2rem auto;
   border-radius: 4px;
-  background: linear-gradient(180deg, #307e6c, #2b996d);
+  background: linear-gradient(180deg, #d57a0b, #bb6906);
 }
 
 .input-group {
@@ -56,10 +56,10 @@ body {
 #user-input input {
   width: 100%;
   padding: 0.5rem;
-  border: 1px solid #76c0ae;
+  border: 1px solid #e07e08;
   border-radius: 0.25rem;
   background-color: transparent;
-  color: #c2e9e0;
+  color: #eee9e3;
   font-size: 1rem;
 }
 
@@ -74,13 +74,13 @@ body {
 
 #result thead {
   font-size: 0.7rem;
-  color: #83e6c0;
+  color: #e9b779;
 }
 
 #result tbody {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 0.85rem;
-  color: #c2e9e0;
+  color: #eee9e3;
 }
 
 .center {
